# Hackathon

MobileApp/sonarmobileapp/: README.md  pubspec.yaml
MobileApp/sonarmobileapp/android/app/: build.gradle.kts
MobileApp/sonarmobileapp/ios/Runner/: Info.plist
MobileApp/sonarmobileapp/ios/Runner.xcodeproj/: project.pbxproj
MobileApp/sonarmobileapp/lib/: main.dart
MobileApp/sonarmobileapp/lib/screens/: events_screen.dart  radar_screen.dart  station_screen.dart
MobileApp/sonarmobileapp/lib/services/: alerts.dart  sensor_service.dart
MobileApp/sonarmobileapp/lib/theme/: sentra_theme.dart
MobileApp/sonarmobileapp/lib/widgets/: radar_display.dart  sentra_widgets.dart
MobileApp/sonarmobileapp/test/: widget_test.dart
MobileApp/sonarmobileapp/web/: index.html  manifest.json
PasswordThingV2/: .gitignore  README.md  me.json  pyproject.toml
PasswordThingV2/keystroke_auth/: __init__.py  __main__.py  capture.py  cli.py  features.py  models.py  personas.py  profile.py  render.py  scoring.py
PasswordThingV2/tests/: test_features.py  test_personas.py  test_scoring.py
Sean Sonar/: README.md  echo_core.py  radar.py  simulate.py  sonar.py
Sean Sonar Backup/: radar.py  sonar.py
Sean Sonar/tests/: test_pipeline.py
Website/: SENTRA Landing.html  index.html
sonar/: .gitignore  README.md  emit_test.py  run.sh  sensor.py  sonar.py  ui.py
sonar/web/: app.js  index.html  sample.json
video/: sentra-method.html  sentra-radar-mock.html
video/sentra-film/: .gitignore  index.html  meta.json  package.json
(+2 files in other folders)
